syntax = "proto3";

package Shared.Contracts.QuizManagement.Quizzes;

import "Common/Common.proto";

service QuizzesService {
	rpc GetQuizzesPaged (Shared.Contracts.Common.GetPagedParameter) returns (GetQuizzesPagedResult);
	rpc GetQuiz (GetQuizByIdParameter) returns (GetQuizByIdResult);
	rpc GetQuizzesByUserPaged (GetQuizzesByUserPagedParameter) returns (GetQuizzesPagedResult);
	rpc GetPublicQuizzesByUserPaged (GetQuizzesByUserPagedParameter) returns (GetQuizzesPagedResult);
	rpc GetQuizzesByTopicPaged (GetQuizzesByTopicPagedParameter) returns (GetQuizzesPagedResult);
	rpc CreateQuiz (CreateQuizParameter) returns (Shared.Contracts.Common.Empty);
	rpc DeleteQuiz (DeleteQuizParameter) returns (Shared.Contracts.Common.Empty);
	rpc DeleteQuizzesByUser (DeleteQuizzesByUserParameter) returns (Shared.Contracts.Common.Empty);
}

// Parameters

message GetQuizByIdParameter {
	int32 QuizId = 1;
}

message GetQuizzesByUserPagedParameter {
	Shared.Contracts.Common.GetPagedParameter PageInfo = 1;
	string UserId = 2;
}

message GetQuizzesByTopicPagedParameter {
	Shared.Contracts.Common.GetPagedParameter PageInfo = 1;
	int32 TopicId = 2;
}

message DeleteQuizParameter {
	int32 QuizId = 1;
}

message DeleteQuizzesByUserParameter {
	string UserId = 1;
	bool KeepPublic = 2;
}

message CreateQuizParameter {
	string Name = 1;
	string UserId = 2;
	repeated QuestionParameter Questions = 3;
	int32 TopicId = 4;
	bool IsPublic = 5;
}

// Parameter DTOs

message QuestionParameter {
	string Text = 1;
	bool IsMultipleChoice = 2;
	repeated AnswerParameter Answers = 3;
}

message AnswerParameter {
	string Text = 1;
	bool IsCorrect = 2;
}


// Results

message GetQuizByIdResult {
	int32 QuizId = 1;
	string Name = 2;
	int64 CreationTimestamp = 3;
	string UserId = 4;
	repeated QuestionResult Questions = 5;
	TopicResult Topic = 6;
	bool IsPublic = 7;
}

message GetQuizzesPagedResult {
	Shared.Contracts.Common.GetPagedResult PageInfo = 1;
	repeated QuizResult Quizzes = 2;
}


// Result DTOs
message AnswerResult {
	int32 AnswerId = 1;
	string Text = 2;
	bool IsCorrect = 3;
}

message QuestionResult {
	int32 QuestionId = 1;
	string Text = 2;
	bool IsMultipleChoice = 3;
	repeated AnswerResult Answers = 4;
}

message QuizResult {
	int32 QuizId = 1;
	string Name = 2;
	int64 CreationTimestamp = 3;
	string UserId = 4;
	TopicResult Topic = 5;
	bool IsPublic = 6;
}

message TopicResult {
	int32 TopicId = 1;
	string Name = 2;
}
